<resources>
    <string name="app_name">SchoolPen</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_lesson"><u>View Lesson</u></string>
    <string name="view_all"><u>View all</u></string>
    <string name="don_t_have_an_account_register">Don\'t have an account?  <font color="#000000"><b>Register</b></font></string>
    <string name="liked_by_nidhi_and_6_others">Liked by <font color="#383838">Nidhi</font> and <font color="#383838">6 others</font></string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <font color="#9163D7"><b>Sign up</b></font></string>
    <string name="already_have_and_account_login">Already have and account? <font color="#9163D7"><b>Login</b></font></string>
    <string name="didn_t_received_otp_resend_otp">Didn\'t received OTP?  <font color="#9163D7"><u><b>Resend OTP</b></u></font></string>
    <string name="attendance_remind_later">Remind me</string>
    <string name="attendance_remind_later_text">later</string>
    <string name="attendance_button_text">Attendance</string>
    <string name="card_skills_des"><b><font color="#383838">Skills you\'ll gain:</font></b> Radian Measure, Triangle Solution, Amplitude, Solving Trigonometric Equation</string>
    <string name="enroll_now"><u>Enroll now</u></string>
    <string name="duties_stats">Duties Stats</string>
    <string name="_310hours">31 hours</string>
    <string name="home_work">Homework</string>
    <string name="start_test">Start Test</string>
    <string name="instruction">Instructions</string>
    <string name="marked_for_review">Marked For\nreview</string>
    <string name="good_to_submit">Good to\nsubmit</string>
    <string name="submit">Submit</string>
    <string name="questions">Questions</string>
    <string name="success">Success!</string>
    <string name="skipped_question">Skipped\nQuestion</string>
    <string name="circle_on_qus_no">Circles on Question numbers</string>
    <string name="success_msg">Hurray! Your Submissions has been sent to your teacher</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="attempted_questions">Attempted Questions</string>
    <string name="skipped_questions">Skipped Questions</string>
    <string name="total_questions">Total Questions</string>
    <string name="return_to_home">Return To Homework</string>
    <string name="marks">Marks:</string>
    <string name="save_and_next">Save and Next</string>
    <string name="hundred_word">100 max words</string>
    <string name="one_word">One word</string>
    <string name="type_answer_hint">Type your answer here</string>
    <string name="or">OR</string>
    <string name="browse_file_here">Browse your file here</string>
    <string name="true_title">True</string>
    <string name="false_title">False</string>
    <string name="instruction_demo_text">User can swipe left &amp; right to change question.\n\nThe selected option will be saved only after Clicking ‘ Save and Next’\n\nQuestions with ‘Mark for review ‘ will not considered untill user click on ‘save and next’ before submitting.\n\nAnswer will automatically submit as soon as time ends.</string>
    <string name="demo_question">Plaster of paris is prepared from?</string>
    <string name="demo2_question">Plaster of paris is prepared from Gypsum?</string>
    <string name="fill_in_blanks_multiple">Plaster of paris is prepared from________. How this chgemical substance is written________?</string>
    <string name="fill_in_blanks">Plaster of paris is prepared from________.</string>
    <string name="love_to_experiment_with_new_ideas_enjoy_the_process_of_discovery_i_am_very_enthuastic_to_learn_new_concepts_in_the_field_of_chemistry_i_want_to_become_a_bio_scientist_in_future_and_study_genealogy">Love to experiment with new ideas, enjoy the process of discovery. I am very enthuastic to learn new concepts in the field of chemistry. I want to become a Bio-scientist in future and study genealogy.</string>
    <string name="connect_with_students_parents"><![CDATA[Connect with students & Parents]]></string>
    <string name="live_class_meetings"><![CDATA[Live Class & Meetings]]></string>
    <string name="if_you_received_an_invitation_link_tap_on_the_link_to_join_the_meeting">If you received an invitation link, tap on the link to join the meeting</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="teacher">Teachers</string>
    <string name="classmates">Classmates</string>
    <string name="syllabus">Syllabus</string>
    <string name="calendar">Calendar</string>
    <string name="school_board">School Board</string>
    <string name="exit">Exit</string>
    <string name="rupee">₹</string>
    <string name="tution_fees">Tution Fees........................ ₹4500</string>
    <string name="library_fees">Library Fees.................... ₹500</string>
    <string name="school_fund">School Fund....................... ₹1500</string>
    <string name="make_payment">Make Payment</string>
    <string name="fees_breakup">Fees Breakup</string>
    <string name="_1st_quater_apr22_jun22">1st Quater (Apr22 - Jun22)</string>
    <string name="fees_name">Fees Name:</string>
    <string name="sis_v_21">SIS/V/21</string>
    <string name="roll_no">Roll No:</string>
    <string name="v">V</string>
    <string name="akriti_singhal">Akriti Singhal</string>
    <string name="classs">Class:</string>
    <string name="student_name">Student Name:</string>
    <string name="total_fees">Total Fees</string>
    <string name="_6000">6000</string>
    <string name="choose_payment_option">Choose Payment option</string>
    <string name="full_payment">Full Payment</string>
    <string name="installment">Installment</string>
    <string name="amount">Amount</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="_1st_quater">1st Quater</string>
    <string name="paid">Paid</string>
    <string name="_2nd_quater">2nd Quater</string>
    <string name="due_this_month">Due this month</string>
    <string name="_3rd_quater">3rd Quater</string>
    <string name="pay_on_may">Pay on May</string>
    <string name="_4th_quater">4th Quater</string>
    <string name="pay_on_nov">Pay on Nov</string>
    <string name="tution_fee">Tution Fee</string>
    <string name="september_fees">September Fees</string>
    <string name="submitted_on_14_09_2022">Submitted on 14/09/2022</string>
    <string name="fee_portal">Fee Portal</string>
    <string name="pending_fee">Pending Fee</string>
    <string name="last_date_14_10_2022">Last Date 14/10/2022</string>
    <string name="payment_history">Payment History</string>
    <string name="sort_by">Sort By</string>
    <string name="filter">Filter</string>
    <string name="library">Library</string>
    <string name="invite_your_parents_to_our_n_parents_app">Invite your Parents to our \n Parents app</string>
    <string name="student">Student</string>
    <string name="class_v">Class V</string>
    <string name="personal_info">Personal Info</string>
    <string name="address">Address</string>
    <string name="delhi_india">Delhi, India</string>
    <string name="email">Email</string>
    <string name="akriti_singhal_gmail_com">akriti_singhal@gmail.com</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="_19_08_1995">19/08/1995</string>
    <string name="perent_s_detail">Parent\'s Detail</string>
    <string name="invite_your_parents_nand_explore_our_parents_app">Invite your parents \nand explore our parents app</string>
    <string name="invite">Invite</string>
    <string name="dinesh_singhal">Dinesh Singhal</string>
    <string name="name">Name</string>
    <string name="ankit_singhal">Ankit Singhal</string>
    <string name="save">Save</string>
    <string name="_34fd5">34FD5</string>
    <string name="copy_code">Copy Code</string>
    <string name="your_speed_is_very_good_maintain_this_and_your_score_will_never_get_down">Stay focused to maintain your grade \nIncrease your accuracy to perform better, send more time in understanding the concepts \nYour speed is very good, maintain this and your score will never get down.</string>
    <string name="view_answer_key"><u>View Answer Key</u></string>
    <string name="title_activity_teacher_live_meeting">TeacherLiveMeetingActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>