<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtQuestion_mcqTrueFalseFrgmnt"
        style="@style/tv_poppins_medium_black_title"
        android:layout_width="0dp"
        android:lineSpacingExtra="-7sp"
        android:text="@string/demo2_question"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgMcq_mcqTrueFalseFrgmnt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestion_mcqTrueFalseFrgmnt">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbTrue_mcqTrueFalseFrgmnt"
            style="@style/rb_regular_black_title"
            android:layout_marginTop="@dimen/_30sdp"
            android:lineSpacingExtra="1sp"
            android:text="@string/true_title"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbFalse_mcqTrueFalseFrgmnt"
            style="@style/rb_regular_black_title"
            android:layout_marginTop="@dimen/_13sdp"
            android:lineSpacingExtra="1sp"
            android:text="@string/false_title"
            android:textSize="@dimen/_12ssp"  />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>