<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/_10sdp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending_fee"
                android:textColor="#383838"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/tutionFeeCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPending">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/gradient_btn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTutionFee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/tution_fee"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvStudentFee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/september_fees"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintStart_toStartOf="@id/tvTutionFee"
                        app:layout_constraintTop_toBottomOf="@id/tvTutionFee" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvFeeAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:drawableStart="@drawable/vector_rupee_"
                        android:drawablePadding="@dimen/_5sdp"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/_6000"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/_24ssp"
                        app:layout_constraintStart_toStartOf="@id/tvStudentFee"
                        app:layout_constraintTop_toBottomOf="@id/tvStudentFee" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_16sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/last_date_14_10_2022"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/tvFeeAmount"
                        app:layout_constraintTop_toBottomOf="@id/tvFeeAmount" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPaymentHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:gravity="center"
                android:text="@string/payment_history"
                android:textColor="#383838"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tutionFeeCard" />

            <HorizontalScrollView
                android:id="@+id/scrollViewHor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:overScrollMode="never"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@id/tvPaymentHistory">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnSortBy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back_with_stroke_30sdp"
                        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                        android:drawablePadding="@dimen/_4sdp"
                        android:drawableTint="@color/color_primary"
                        android:fontFamily="@font/lato_semi_bold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_14sdp"
                        android:paddingTop="@dimen/_4sdp"
                        android:paddingEnd="@dimen/_4sdp"
                        android:paddingBottom="@dimen/_4sdp"
                        android:text="@string/sort_by"
                        android:textColor="#9163d7"
                        android:textSize="@dimen/_10ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btnFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@drawable/back_with_stroke_30sdp"
                        android:drawableEnd="@drawable/ic_baseline_tune_20"
                        android:drawablePadding="@dimen/_4sdp"
                        android:drawableTint="@color/color_primary"
                        android:fontFamily="@font/lato_semi_bold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_14sdp"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:text="@string/filter"
                        android:textColor="#9163d7"
                        android:textSize="@dimen/_10ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@drawable/back_with_stroke_30sdp"
                        android:fontFamily="@font/lato_semi_bold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_14sdp"
                        android:paddingTop="@dimen/_7sdp"
                        android:paddingEnd="@dimen/_14sdp"
                        android:paddingBottom="@dimen/_7sdp"
                        android:text="@string/tution_fee"
                        android:textColor="#9163d7"
                        android:textSize="@dimen/_10ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@drawable/back_with_stroke_30sdp"
                        android:fontFamily="@font/lato_semi_bold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_14sdp"
                        android:paddingTop="@dimen/_7sdp"
                        android:paddingEnd="@dimen/_14sdp"
                        android:paddingBottom="@dimen/_7sdp"
                        android:text="@string/library"
                        android:textColor="#9163d7"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scrollViewHor"
                tools:layout_editor_absoluteX="0dp"
                tools:listitem="@layout/item_payment_history" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_btn"
        android:src="@drawable/vector_rupee_"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/MyShapeAppearanceOverlay"
        app:useCompatPadding="true" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnMakepayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/color_primary"
        android:text="@string/make_payment"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:icon="@drawable/vector_rupee_"
        app:iconSize="@dimen/_12sdp"
        app:iconTint="@color/white"
        app:layout_anchorGravity="bottom|right|end|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Tooltip" />


</androidx.constraintlayout.widget.ConstraintLayout>